[package]
name = "feather"
version = "0.8.1"
edition = "2024"
repository = "https://github.com/BersisSe/feather"
description = "Feather: A minimal HTTP framework for Rust"
authors = ["Bersis Sevimli"]
license = "MIT"
readme = "README.md"
keywords = ["http", "web", "framework", "minimal", "rust"]
categories = ["web-programming", "network-programming"]

[dependencies]
chrono = { workspace = true }
feather-runtime = { workspace = true}
feather-macros = {workspace = true}
jsonwebtoken = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
log ={ workspace = true, optional = true }
tracing-subscriber = { version = "0.3", optional = true }
parking_lot = { workspace = true }

[features]
default = ["log"]
log = ["dep:log","dep:tracing-subscriber", "feather-runtime/log"]
json = ["dep:serde", "dep:serde_json", "feather-runtime/json"]
jwt = ["dep:jsonwebtoken","json", "feather-macros/jwt"]
async = ["feather-runtime/async"]
