[package]
name = "middleware"
version = "0.0.0"
edition = "2024"
publish = false

[features]
async = ["feather/async"]

[dependencies]
feather = { workspace = true, features = ["log", "jwt"] }
async-std = "1.13.2"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "middleware-sync"
path = "src/main.rs"

[[bin]]
name = "middleware-async"
path = "src/async/mod.rs"